testsuite/tests/grammar/invalid_lexers/pattern_1.lkt
import common

lexer foo_lexer {
    example <- p"["
}

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
